k8s/overlays/produseast2/deployment_patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: chat
spec:
  template:
    spec:
      containers:
        - name: chat
          image: msfintlnycproduseast2.azurecr.io/chatbot:latest-produseast2
